removed dumb html serving client side

--- a/exercice_1/frontend/template.html
+++ b/exercice_1/frontend/template.html
@@ -6,8 +6,6 @@
 </head>
 <body>
   <h1>Backend response:</h1>
-  <pre id="output">Loading...</pre>
-
-  <script src="app.js"></script>
+  <!-- REPLACE_BLOCK -->
 </body>
 </html>
